feat: second fase, adding first changes
